(executable
 (name main)
 (enabled_if (and
  (<> %{context_name} default.ios)
  (<> %{context_name} device.ios)
  (<> %{context_name} simulator.ios)
  (<> %{context_name} simulator-arm.ios)
  (<> %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework AppKit")
 (libraries camlkit-base.foundation camlkit-gui.appkit camlkit.camlkit))
