(executable
 (name main)
 (enabled_if (or
  (= %{context_name} default.ios)
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)))
 (libraries
  camlkit-base.Foundation
  camlkit-gui.UIKit)
 (foreign_stubs
  (language c)
  (flags
   :standard
   -x objective-c
   -DCAML_NAME_SPACE)
  (names stubs))
 (modes (native object)))

(rule
 (enabled_if (or
  (= %{context_name} default.ios)
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)))
 (deps main.exe.o)
 (targets libcaml.a)
 (action (run ar cq %{targets} %{deps})))