(executable
 (name main)
 (enabled_if (and
  (<> %{context_name} default.ios)
  (<> %{context_name} device.ios)
  (<> %{context_name} simulator.ios)
  (<> %{context_name} simulator-arm.ios)
  (<> %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework AppKit")
 (libraries camlkit-base.foundation camlkit-gui.appkit camlkit.camlkit))

(subdir ToDo.app/Contents
 (rule
  (deps ../../Info.plist)
  (targets Info.plist)
  (action (copy ../../Info.plist Info.plist))))

(subdir ToDo.app/Contents/MacOS
 (rule
  (deps ../../../main.exe)
  (targets ToDo)
  (action (copy ../../../main.exe ToDo))))

(subdir ToDo.app/Contents/Resources
 (rule
  (deps ../../../icon.jpeg)
  (targets ToDo.jpeg)
  (action (copy ../../../icon.jpeg ToDo.jpeg))))

(subdir ToDo.app/Contents/Resources/Base.lproj
 (rule
  (deps
    ../../../../MainMenu.nib
    ../../../../Document.nib)
  (targets MainMenu.nib Document.nib)
  (action
   (progn
    (copy ../../../../MainMenu.nib MainMenu.nib)
    (copy ../../../../Document.nib Document.nib)))))