(executable
 (name main)
 (enabled_if (and
  (<> %{context_name} default.ios)
  (<> %{context_name} device.ios)
  (<> %{context_name} simulator.ios)
  (<> %{context_name} simulator-arm.ios)
  (<> %{context_name} catalyst.ios)))
 (flags :standard -cclib "-L/usr/GNUstep/System/Library/Libraries -lgnustep-gui -lgnustep-base -lobjc")
 (libraries camlkit-base.Foundation camlkit-gui.AppKit camlkit.camlkit))

(subdir GSApp.app
 (rule
  (deps ../main.exe)
  (targets GSApp)
  (enabled_if (and
   (<> %{context_name} default.ios)
   (<> %{context_name} device.ios)
   (<> %{context_name} simulator.ios)
   (<> %{context_name} simulator-arm.ios)
   (<> %{context_name} catalyst.ios)))
  (action (copy ../main.exe GSApp))))

(subdir GSApp.app/Resources
 (rule
  (deps ../../Info-gnustep.plist)
  (targets Info-gnustep.plist)
  (action (copy ../../Info-gnustep.plist Info-gnustep.plist))))
